--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.17",
+    "@expo/metro-runtime": "~3.1.3",
+    "css-to-react-native": "^3.2.0",
+    "expo": "^50.0.17",
+    "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-drop-shadow": "^1.0.0",
+    "react-native-gradients": "^2.1.1",
+    "react-native-svg": "^15.2.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
