--- a/package.json
+++ b/package.json
@@ -10,17 +10,29 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@types/react": "~18.2.45",
+    "axios": "^1.6.8",
     "css-to-react-native": "^3.2.0",
     "expo": "^50.0.17",
-    "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.11.1",
+    "firebase-admin": "^12.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-drop-shadow": "^1.0.0",
     "react-native-gradients": "^2.1.1",
+    "react-native-peerjs": "^1.0.4",
+    "react-native-radial-gradient": "^1.1.4",
     "react-native-svg": "^15.2.0",
-    "react-native-web": "~0.19.6"
+    "react-native-video": "^5.2.1",
+    "react-native-web": "~0.19.6",
+    "react-native-webrtc": "^118.0.7",
+    "react-native-webrtc-web-shim": "^1.0.6",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.7.5",
+    "typescript": "^5.3.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
