--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native/metro-config": "^0.74.83",
     "@types/react": "~18.2.45",
     "axios": "^1.6.8",
     "css-to-react-native": "^3.2.0",
@@ -20,11 +21,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-drop-shadow": "^1.0.0",
     "react-native-gradients": "^2.1.1",
+    "react-native-incall-manager": "^4.2.0",
     "react-native-peerjs": "^1.0.4",
-    "react-native-radial-gradient": "^1.1.4",
     "react-native-svg": "^15.2.0",
+    "react-native-svg-transformer": "^1.4.0",
     "react-native-video": "^5.2.1",
     "react-native-web": "~0.19.6",
     "react-native-webrtc": "^118.0.7",
