--- a/ios/BuzzrRn/Info.plist
+++ b/ios/BuzzrRn/Info.plist
@@ -30,6 +30,14 @@
 				<string>com.anonymous.BuzzrRn</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>app-1-711844652850-ios-24cb9e788691f08d9cd92b</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
