--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "^8.0.5",
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/auth": "^20.1.0",
+    "@react-native-firebase/firestore": "^20.1.0",
+    "@react-native-firebase/storage": "^20.1.0",
     "@react-native/metro-config": "^0.74.83",
     "@types/react": "~18.2.45",
     "axios": "^1.6.8",
     "css-to-react-native": "^3.2.0",
     "expo": "^50.0.17",
+    "expo-build-properties": "^0.12.3",
+    "expo-dev-client": "~3.3.12",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.11.1",
     "firebase-admin": "^12.1.0",
@@ -24,12 +31,15 @@
     "react-native-gradients": "^2.1.1",
     "react-native-incall-manager": "^4.2.0",
     "react-native-peerjs": "^1.0.4",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-svg": "^15.2.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-native-video": "^5.2.1",
     "react-native-web": "~0.19.6",
     "react-native-webrtc": "^118.0.7",
     "react-native-webrtc-web-shim": "^1.0.6",
+    "react-phone-number-input": "^3.4.3",
+    "rn-phone-number-input": "^0.3.2",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.5",
     "typescript": "^5.3.0",
