--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "plugins": [
       "@react-native-firebase/app",
       "@react-native-firebase/auth",
-
+      "@react-native-google-signin/google-signin",
       [
         "expo-build-properties",
         {
