--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>711844652850-b3g9nrm7d1b0qbj78hosvers8g6hutlg.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.711844652850-b3g9nrm7d1b0qbj78hosvers8g6hutlg</string>
 	<key>API_KEY</key>
 	<string>AIzaSyC2znpC3bSeatoRhCaIhVWYJR0WECgTGek</string>
 	<key>GCM_SENDER_ID</key>
@@ -9,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.buzzrapp.buzzr</string>
+	<string>com.buzzr.buzzr</string>
 	<key>PROJECT_ID</key>
 	<string>buzzr-c896a</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:711844652850:ios:24cb9e788691f08d9cd92b</string>
+	<string>1:711844652850:ios:aeb7e4f0f2a839529cd92b</string>
 </dict>
 </plist>
