--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@expo/config-plugins": "^8.0.5",
     "@expo/metro-runtime": "~3.1.3",
+    "@invertase/react-native-apple-authentication": "^2.3.0",
     "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/auth": "^20.1.0",
     "@react-native-firebase/firestore": "^20.1.0",
     "@react-native-firebase/storage": "^20.1.0",
+    "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-native/metro-config": "^0.74.83",
     "@types/react": "~18.2.45",
     "axios": "^1.6.8",
@@ -28,12 +30,17 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-confirmation-code-field": "^7.4.0",
+    "react-native-elements": "^3.4.3",
     "react-native-gradients": "^2.1.1",
     "react-native-incall-manager": "^4.2.0",
     "react-native-peerjs": "^1.0.4",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-radio-buttons-group": "^3.1.0",
+    "react-native-safe-area-context": "^4.10.4",
     "react-native-svg": "^15.2.0",
     "react-native-svg-transformer": "^1.4.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-video": "^5.2.1",
     "react-native-web": "~0.19.6",
     "react-native-webrtc": "^118.0.7",
